--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
         "name": "David Kalosi",
         "email": "david.kalosi@gmail.com"
     },
-    "keywords": ["money", "javascript", "currency"],
-    "files": ["lib"],
+    "keywords": [
+        "money",
+        "javascript",
+        "currency"
+    ],
+    "files": [
+        "lib"
+    ],
     "licenses": {
         "type": "MIT"
     },
